examples/test/testpolicy5486.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5486
  namespace: namespace205
spec:
  podSelector:
    matchLabels:
      key39: value15
      key19: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value14
          key26: value30
      podSelector:
        matchLabels:
          key40: value14
